tests/ui/const-generics/issues/issue-87493.stderr
error: expected one of `,` or `>`, found `==`
  --> $DIR/issue-87493.rs:8:22
   |
LL |     T: MyTrait<Assoc == S::Assoc>,
   |                      ^^ expected one of `,` or `>`
   |
help: if you meant to use an associated type binding, replace `==` with `=`
   |
LL -     T: MyTrait<Assoc == S::Assoc>,
LL +     T: MyTrait<Assoc = S::Assoc>,
   |

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-87493.rs:8:8
   |
LL |     T: MyTrait<Assoc == S::Assoc>,
   |        ^^^^^^^ expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/issue-87493.rs:1:11
   |
LL | pub trait MyTrait {
   |           ^^^^^^^
help: replace the generic bound with the associated type
   |
LL |     T: MyTrait<Assoc = Assoc == S::Assoc>,
   |                +++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
